# xxv

./: .gitignore  .travis.yml  Cargo.toml  Readme.adoc  make-docs.sh
.github/workflows/: rust.yml
docs/: index.adoc  index.html
src/: byte_reader.rs  crash_message.txt  file_search.rs  goto_dialog.rs  help_text.md  help_text.rs  hex_reader.rs  hex_tables.rs  hex_view.rs  hex_view_printers.rs  kmp_search.rs  main.rs  open_file_dialog.rs  panic_hook.rs  search_dialog.rs  set_width_dialog.rs  status_bar.rs  switch_file_dialog.rs  usage.txt  utilities.rs  xv_state.rs  xv_tui.rs  xxv_state.rs  xxv_tui.rs
