[package]
name = "xxv"
version = "0.1.3"
authors = ["Chris Vest <mr.chrisvest@gmail.com>"]
edition = "2018"
description = "A hex viewer for the terminal, with a visual text user interface."
keywords = ["hex", "binary", "ncurses"]
categories = ["command-line-utilities", "development-tools"]
license = "GPL-3.0"
homepage = "https://chrisvest.github.io/xxv/"
repository = "https://github.com/chrisvest/xxv"
readme = "Readme.adoc"
exclude = [
    "docs/*",
    ".gitignore",
    ".travis.yml",
]

[badges.travis-ci]
repository = "chrisvest/xxv"

[profile.release]
overflow-checks = true
codegen-units = 1
lto = true
opt-level = 's'
panic = "abort"

[dependencies]
cursive = { version = "0.14.0", default-features = false }
unicode-width = "0.1.6"
directories = "2.0.2"
rmp-serde = "0.13.7"
serde = "1.0.99"
serde_derive = "1.0.99"
backtrace = "0.3.35"
time = "0.1.42"
bstr = { version = "0.2.10", default-features = false, features = ["std"] }

[target.'cfg(target_os = "linux")'.dependencies]
rio = "0.9.2"
#wl-clipboard-rs = "0.2.0" # Wayland clipboard integration.

[dev-dependencies]
tempfile = "3.1.0"

[features]
default = ["cursive/ncurses-backend"]
crossterm = ["cursive/crossterm-backend"]

