[package]
name = "xxv"
version = "0.1.3"
authors = ["Chris Vest <mr.chrisvest@gmail.com>"]
edition = "2021"
description = "A hex viewer for the terminal, with a visual text user interface."
keywords = ["hex", "binary", "ncurses"]
categories = ["command-line-utilities", "development-tools"]
license = "GPL-3.0"
homepage = "https://chrisvest.github.io/xxv/"
repository = "https://github.com/chrisvest/xxv"
readme = "Readme.adoc"
exclude = [
    "docs/*",
    ".gitignore",
    ".travis.yml",
]

[badges.travis-ci]
repository = "chrisvest/xxv"

[profile.release]
overflow-checks = true
codegen-units = 1
lto = true
opt-level = 's'
panic = "abort"

[dependencies]
cursive = { version = "0.17", default-features = false }
unicode-width = "0.1"
directories = "4.0"
rmp-serde = "1.0"
serde = "1.0"
serde_derive = "1.0"
backtrace = "0.3"
time = "0.3"
bstr = { version = "0.2", default-features = false, features = ["std"] }

[target.'cfg(target_os = "linux")'.dependencies]
rio = "0.9.4"
#wl-clipboard-rs = "0.2.0" # Wayland clipboard integration.

[dev-dependencies]
tempfile = "3.2"

[features]
default = ["cursive/ncurses-backend"]
crossterm = ["cursive/crossterm-backend"]

